# phantom-of-scopa

./: .gitignore  Cargo.toml  README.md
phantom-of-scopa/: .gitignore  Cargo.toml
phantom-of-scopa/assets/: colors.xcf
phantom-of-scopa/src/: config.rs  error.rs  events.rs  game.rs  main.rs  popups.rs  resources.rs  styles.rs
phantom-of-scopa/src/game/: components.rs  constants.rs  mod.rs  popups.rs  resources.rs  styles.rs  systems.rs
phantom-of-scopa/src/game/game_menu/: components.rs  mod.rs  systems.rs
phantom-of-scopa/src/menu/: components.rs  mod.rs  systems.rs
phantom-of-scopa/src/startup/: components.rs  mod.rs  systems.rs
phantom-of-server/: Cargo.toml
phantom-of-server/src/: main.rs
scopa-lib/: Cargo.toml
scopa-lib/src/: card.rs  error.rs  event.rs  lib.rs  player.rs
scopa-lib/tests/: tests.rs
