[package]
name = "phantom-of-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
env_logger = "0.11.10"
log = "0.4.29"
renet = "0.0.14"
scopa-lib = { version = "0.1.0", path = "../scopa-lib" }
serde = { version = "1.0.228", features = ["derive"] }
